--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,8 @@
     "These will require a little more Googling/research (just do as many as you can):\n",
     "6. Create a List of all of the company names in alphabetical order\n",
     "7. Create a List containing a deduped list of the states of incorporation in alphabetical order\n",
-    "8. Create a List containing a deduped list of the states of incorporation in alphabetical order for companies with a company name starting with the letter A\n"
+    "8. Create a List containing a deduped list of the states of incorporation in alphabetical order for companies with a company name starting with the letter A\n",
+    "9. Create a List of Dictionaries, ordered by the company_name and with a third key `name_and_state` in each dictionary containing the company name, a comma and a space and then the state of incorporation (e.g. \"Acme, Alabama\").\n"
    ]
   },
   {
@@ -81,7 +82,9 @@
    "source": [
     "## Summary\n",
     "\n",
-    "Congratulations! You got a whole bunch of practice iterating over collections and retrieving data from them!"
+    "Congratulations! You got a whole bunch of practice iterating over collections and retrieving data from them! This week we created a really solid foundation for the rest of the course. We ensured that everyone had Jupyter Notebook set up and working, introduced variables, data types and some common operations for data cleaning. We also learned about collections and how to iterate over them to clean up data.\n",
+    "\n",
+    "Next week we're going to introduce you to some more powerful data types for working with data and how to use regular expressions to perform more sophisticated data clean up. By the end of next week you're going to be importing a data set, iterating over it, cleaning it up and saving it to a file like a pro!\n"
    ]
   }
  ],
